[gd_scene load_steps=8 format=2]

[ext_resource path="res://BotonesMenu/NameAbout.tscn" type="PackedScene" id=1]
[ext_resource path="res://BotonesMenu/BotonHow2Play.tscn" type="PackedScene" id=2]
[ext_resource path="res://BotonesMenu/BotonVolverAbout.tscn" type="PackedScene" id=3]
[ext_resource path="res://BotonesMenu/BotonCreditos.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/Tierra.png" type="Texture" id=5]
[ext_resource path="res://Scripts/About.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0.486275, 0, 1 )
border_width_bottom = 5
border_color = Color( 1, 0.486275, 0, 1 )
corner_detail = 12

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.023
anchor_top = 0.05
anchor_right = 0.977
anchor_bottom = 0.95
margin_left = 0.448
margin_top = 1.90735e-06
margin_right = -0.447998
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_right = 976.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 100.0
margin_right = 976.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 40 )
custom_styles/separator = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 144.0
margin_right = 976.0
margin_bottom = 540.0

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 40.0
margin_bottom = 396.0
rect_min_size = Vector2( 40, 396 )

[node name="Botones" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 44.0
margin_right = 508.0
margin_bottom = 396.0
size_flags_horizontal = 3
custom_constants/separation = 35
alignment = 1

[node name="BotonComoJugar" parent="VBoxContainer/HBoxContainer/Botones" instance=ExtResource( 2 )]
margin_top = 88.0
margin_right = 464.0
margin_bottom = 138.0

[node name="BotonCreditos" parent="VBoxContainer/HBoxContainer/Botones" instance=ExtResource( 4 )]
margin_top = 173.0
margin_right = 464.0
margin_bottom = 223.0

[node name="BotonVolver" parent="VBoxContainer/HBoxContainer/Botones" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 258.0
margin_right = 464.0
margin_bottom = 308.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 512.0
margin_right = 976.0
margin_bottom = 396.0
size_flags_horizontal = 15
size_flags_vertical = 5
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Botones/BotonComoJugar" to="." method="_on_BotonComoJugar_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Botones/BotonCreditos" to="." method="_on_BotonCreditos_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Botones/BotonVolver" to="." method="_on_BotonVolver_pressed"]
